<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        tools:context=".ProgramList"
        android:orientation="vertical">

    <ScrollView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/scrollview">

        <LinearLayout
                xmlns:android="http://schemas.android.com/apk/res/android"
                android:orientation="vertical"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">

            <include layout="@layout/header" />

            <include layout="@layout/separator" />

            <ViewFlipper
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/dayFlipper">

                <RelativeLayout
                        android:background="@color/grey"
                        android:layout_width="fill_parent"
                        android:layout_height="@dimen/day_height">

                    <TextView
                            android:id="@+id/day_1_text"
                            android:text="@string/day_1_text"
                            android:textSize="@dimen/day_text_size"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerInParent="true"/>

                    <ImageButton
                            android:id="@+id/day_1"
                            android:background="@null"
                            android:src="@drawable/arrow_right"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:contentDescription="@string/day_1"
                            android:layout_alignParentRight="true"
                            android:layout_centerVertical="true"
                            android:layout_marginRight="10dp"/>

                </RelativeLayout>

                <RelativeLayout
                        android:background="@color/grey"
                        android:layout_width="fill_parent"
                        android:layout_height="@dimen/day_height">

                    <ImageButton
                            android:id="@+id/day_2"
                            android:background="@null"
                            android:src="@drawable/arrow_left"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:contentDescription="@string/day_2"
                            android:layout_marginLeft="10dp" />

                    <TextView
                            android:id="@+id/day_2_text"
                            android:text="@string/day_2_text"
                            android:textSize="@dimen/day_text_size"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerInParent="true"/>


                </RelativeLayout>

            </ViewFlipper>

            <include layout="@layout/separator" />

        </LinearLayout>

    </ScrollView>

    <include layout="@layout/menu"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true" />

</RelativeLayout>
